# music-detection-lab

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  main.py  pyproject.toml  requirements.txt
docs/: dev_log.md  development_plan.md  research_plan.md
docs/paper-reviews/: detecting_musical_deepfakes_sunday_2025.md
src/: __init__.py  preprocess.py
src/common/: augment.py  features.py  metrics.py  preprocess.py  test_audio_io.py
src/sunday/: model.py
src/utils/: __init__.py
