[project]
name = "ai-music-detection-lab"
version = "0.1.0"
description = "AI-Generated Music Detection and Unlearnable Data Research"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "librosa>=0.9.0",
    "soundfile>=0.10.3",
    "torchaudio>=0.12.0,<2.3.0",
    "pydub>=0.25.0",
    "torch>=2.0.0,<2.3.0",
    "torchvision>=0.15.0,<0.18.0",
    "tqdm>=4.62.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.2",
    "streamlit>=1.20.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]